# bonsai

./: .gitignore  README.md  bonsai.Dockerfile  counter.py  docker-compose.yml  flake.nix  main.py  mkdocs.yml  pyproject.toml  riscv-toolchain.Dockerfile
.github/workflows/: pytest.yml
bonsai/: bus.py  cache.py  cli.py  config.py  core.py  counter.py  datatype.py  format.py  inst.py  instfetch.py  kanata_log.py  log.py  lsu.py  main.py  pipeline.py  pipeline_ctrl.py  pipeline_reg.py  pipeline_stage.py  regfile.py  stage.py  top.py  util.py
bonsai/behav/: emulator.py
bonsai/emu/: calc.py  core.py  emulator.py  mem.py
bonsai/inst_types/: base_int.py
bonsai/lib/: uart.py
bonsai/periph/: gpio.py  sdcard.py  spi.py  tfcard.py  timer.py  uart.py  video.py
bonsai/rtl/: builder.py  bus.py  calc.py  core.py  top.py
bonsai/rtl/periph/: gpio.py  spi.py  timer.py  video.py
bonsai/sim/: simulator.py
eda/bonsai_tangnano9k/: .gitignore  bonsai_tangnano9k.gprj
eda/bonsai_tangnano9k/impl/: bonsai_tangnano9k_process_config.json
eda/bonsai_tangnano9k/impl/temp/: rtl_parser.result  rtl_parser_arg.json
eda/bonsai_tangnano9k/src/gowin_rpll/: gowin_rpll.ipc  gowin_rpll.mod  gowin_rpll.v  gowin_rpll_tmp.v
eda/bonsai_tangnano9k/src/psram_memory_interface_hs_2ch/: psram_memory_interface_hs_2ch.ipc  psram_memory_interface_hs_2ch.v  psram_memory_interface_hs_2ch.vo
eda/bonsai_tangnano9k/src/psram_memory_interface_hs_2ch/temp/psram_memory_interface_hs_2ch/: psram_define.v  psram_memory_interface_hs_2ch.prj  psram_memory_interface_hs_2ch_syn.rpt.html  psram_memory_interface_hs_2ch_syn_resource.html  psram_memory_interface_hs_2ch_syn_rsc.xml  psram_memory_interface_hs_2ch_tmp.v  psram_param.v
misc/: arch.drawio  build-riscv-tests.sh
misc/platform/: Makefile
misc/platform/driver/: uart.cc  uart.h
misc/platform/lib/: soc.h  stdio.cc  stdio.h
misc/platform/main/: BUILD  hello1.cc  hello2.cc
misc/riscv-tests-isa/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-lh-misaligned  rv32mi-p-lh-misaligned.dump  rv32mi-p-lw-misaligned  rv32mi-p-lw-misaligned.dump  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-sh-misaligned  rv32mi-p-sh-misaligned.dump  rv32mi-p-shamt  rv32mi-p-sw-misaligned  rv32mi-p-sw-misaligned.dump  rv32mi-p-zicntr  rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-sbreak  rv32si-p-scall  rv32si-p-wfi  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32ua-v-amoadd_w  rv32ua-v-amoadd_w.dump  rv32ua-v-amoand_w  rv32ua-v-amoand_w.dump  rv32ua-v-amomax_w  rv32ua-v-amomax_w.dump  (+441 more)
ruskv/: top.py
tests/: __init__.py  common.py  test_cache.py  test_counter.py  test_instfetch.py  test_log.py  test_lsu.py  test_stage.py  test_stage_if.py  test_stage_is.py  test_uart.py  test_util.py  testutil.py  util.py
tests/emu/: test_mem.py
tests/rtl/: test_util.py
