[project]
name = "bonsai"
version = "0.1.0"
description = "toy risc-v processor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amaranth-boards",
    "amaranth-soc",
    "amaranth[builtin-yosys]>=0.5.3",
    "asyncio>=3.4.3",
    "pydantic>=2.10.2",
    "taskipy>=1.14.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "amaranth-yosys>=0.40.0.0.post100",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
]

[tool.uv.sources]
amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards.git" }
amaranth-soc = { git = "https://github.com/amaranth-lang/amaranth-soc.git" }

[tool.taskipy.tasks]
run = "python bonsai/cli.py"
test = "pytest -v --ff -rfs"
cov = "pytest --cov bonsai --cov-report term --cov-report xml"
check = "ruff check --fix"
format = "ruff format"
mypy = "mypy bonsai"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff]
extend-ignore = ["F841"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
